# SalesCalculator

./: .gitignore  CMakeLists.txt  README.md
.cursor/plans/: universalreferencewidget-autocomplete.plan.md
.cursor/rules/: catalog-hierarchy.mdc  clean-architecture.mdc  cmake-conventions.mdc  code-and-document-numbering.mdc  cpp-qt-style.mdc  database-connections.mdc  logging.mdc  optimistic-locking.mdc  project-context.mdc  sql-scripts.mdc  universal-reference-widget.mdc
app/: Application.cpp  Application.h  CMakeLists.txt  SCApplication.cpp  SCApplication.h  main.cpp
core/: CMakeLists.txt  README.md
core/application/: CMakeLists.txt
core/db/: CMakeLists.txt  DatabaseConnectionInfo.h
core/domain/: CMakeLists.txt
infrastructure/: CMakeLists.txt
sql/: 01_users.sql  02_user_roles.sql  03_seed_users_and_roles.sql  04_units.sql  05_nomenclature.sql  06_nomenclature_units.sql  07_nomenclature_barcodes.sql  08_seed_nomenclature_50_hierarchy.sql  09_cleanup_test_nomenclature.sql
src/app/: ApplicationBootstrapper.cpp  ApplicationBootstrapper.h  CMakeLists.txt  FormControllerImpl.cpp  FormControllerImpl.h  main.cpp
src/application/: CMakeLists.txt  IQueryService.h  ITreeQueryService.h
src/application/auth/: AuthenticatedUser.cpp  AuthenticatedUser.h  IAuthService.h
src/application/catalogs/: ICatalogQueryService.h
src/application/catalogs/nomenclature/: INomenclatureCommandService.h  INomenclatureQueryService.h  INomenclatureTreeQueryService.h
src/application/catalogs/units/: IUnitCommandService.h  IUnitQueryService.h
src/application/database/: DatabaseConnectionInfo.h
src/application/documents/: IDocumentQueryService.h
src/application/forms/: ReferenceFieldPolicy.h
src/core/: AutoNumbering.h  CMakeLists.txt  Logger.cpp  Logger.h  LoggerGuard.h
src/domain/: CMakeLists.txt
src/infrastructure/: CMakeLists.txt
src/infrastructure/auth/: SqlAuthService.cpp  SqlAuthService.h
src/infrastructure/catalogs/nomenclature/: SqlNomenclatureQueryService.cpp  SqlNomenclatureQueryService.h  SqlNomenclatureTreeQueryService.cpp  SqlNomenclatureTreeQueryService.h
src/infrastructure/catalogs/units/: SqlUnitQueryService.cpp  SqlUnitQueryService.h
src/infrastructure/db/: DbConnectionProvider.cpp  DbConnectionProvider.h  DbProviderGuard.cpp  DbProviderGuard.h  UnitOfWork.cpp  UnitOfWork.h
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/ui/application/: ScApplication.cpp  ScApplication.h
src/ui/dialogs/: AuthDialog.cpp  AuthDialog.h  AuthDialog.ui  EditDatabaseDialog.cpp  EditDatabaseDialog.h  EditDatabaseDialog.ui  SelectDatabaseDialog.cpp  SelectDatabaseDialog.h  SelectDatabaseDialog.ui
src/ui/formController/: FormType.h  IFormController.h
src/ui/forms/base/: FormSyncBus.cpp  FormSyncBus.h  ListForm.cpp  ListForm.h  ListForm.ui  MdiUtils.cpp  MdiUtils.h
src/ui/forms/catalogs/nomenclature/: NomenclatureChoiceForm.cpp  NomenclatureChoiceForm.h  NomenclatureGroupForm.cpp  NomenclatureGroupForm.h  NomenclatureGroupForm.ui  NomenclatureItemForm.cpp  NomenclatureItemForm.h  NomenclatureItemForm.ui  NomenclatureListForm.cpp  NomenclatureListForm.h  NomenclatureTreeModel.cpp  NomenclatureTreeModel.h
src/ui/forms/catalogs/units/: UnitChoiceForm.cpp  UnitChoiceForm.h  UnitItemForm.cpp  UnitItemForm.h  UnitItemForm.ui
src/ui/widgets/: UniversalReferenceWidget.cpp  UniversalReferenceWidget.h  UniversalReferenceWidget.ui
src/ui_i18n/: CMakeLists.txt
src/ui_resources/: CMakeLists.txt  icons.qrc  resource.qrc
src/ui_resources/Style/: Application.qss  Baf.qss  Blue.qss  Coffee.qss  Dark.qss  DarkBlue.qss  DarkOlive.qss  Default.qss  Khaki.qss  Nostyle.qss  OneC83.qss  Pagefold.qss  Transparent.qss  Yellow.qss
src/ui_resources/icons/Catalog/: manifest.xml
src/ui_resources/icons/CheckAll/: manifest.xml
src/ui_resources/icons/Document/: manifest.xml
src/ui_resources/icons/GrayedAll/: manifest.xml
src/ui_resources/icons/InputFieldChooseType/: manifest.xml
src/ui_resources/icons/MarkToDelete/: manifest.xml
src/ui_resources/icons/Rename/: manifest.xml
ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
ui/application/: ScApplication.cpp  ScApplication.h
ui/base/: BaseCatalogListForm.cpp  BaseCatalogListForm.h  BaseCatalogListForm.ui  BaseCatalogObjectForm.cpp  BaseCatalogObjectForm.h  BaseCatalogObjectForm.ui  BaseCatalogSelectForm.cpp  BaseCatalogSelectForm.h  BaseCatalogSelectForm.ui  CMakeLists.txt
ui/catalogs/: CMakeLists.txt
ui/dialogs/: EditDatabaseDialog.cpp  EditDatabaseDialog.h  SelectDatabaseDialog.cpp  SelectDatabaseDialog.h
ui/windows/: MainWindow.cpp  MainWindow.h
